# AI-Companion

./: .gitignore  PROJECT_MASTER_STATUS.md  README.md  RECOVERY_AND_RESUME.md  architecture.md  pyproject.toml  requirements.txt  run_companion.py  start_v2.sh
config/: agents_config.yaml  gcp_config.yaml  safety_rules.yaml
deploy/: Dockerfile.orchestrator  cloud_run_deploy.sh
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: AGENT_ORCHESTRATION.md  ARCHITECTURE.md  CLOUD_DEPLOYMENT_ARCHITECTURE.md  DEMO_VIDEO_SCRIPT.md  DEPLOYMENT_GUIDE.md  GEMINI_API_SPEC.md  HACKATHON_STRATEGY.md  MEMORY_ARCHITECTURE.md  SECURITY_MODEL.md  TECH_STACK.md  TOOL_USAGE_MATRIX.md
src/orchestrator/: companion_v2.py  computer_agent.py  voice_bridge.py
src/orchestrator/agents/: browser.py  executor.py  memory.py  planner.py  safety.py  verifier.py  vision.py
src/orchestrator/gemini/: client.py  client_aistudio.py  prompts_v2.py
src/orchestrator/memory/: long_term.py  short_term.py
src/orchestrator/security/: audit_logger.py  errors.py  rate_limiter.py  sanitizer.py
src/orchestrator/vision/: screen_capture.py
src/ui/: index.html  index_v2.html  package-lock.json  package.json  vite.config.v2.ts
src/ui/electron/: main.js  main.ts  main_v2.js  preload.js  preload_v2.js
src/ui/src/: App.tsx  App_v2.tsx  main_v2.tsx  styles_v2.css
src/ui/src/components/: ActivityFeed.tsx  Avatar.tsx  ChatPanel.tsx  (+7 more)
tests/e2e/: test_scenarios.py
tests/fixtures/: mock_responses.py
tests/integration/: test_orchestration.py
tests/unit/: test_core.py  test_security.py
