[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnicompanion"
version = "0.1.0"
description = "Autonomous AI companion that sees, understands, and controls your computer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
omnicompanion = "src.orchestrator.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
